--- a/adm/html/member-teacher-list.html
+++ b/adm/html/member-teacher-list.html
@@ -98,7 +98,7 @@
             </div>
             <div class="sch-form-wrap flex-inline">
               <div class="input-group">
-                <select class="krds-form-select medium" title="년도 선택">
+                <select class="krds-form-select medium" title="지역 선택">
                   <option value="">전체</option>
                   <option value="">공주</option>
                   <option value="">당진</option>
@@ -128,7 +128,7 @@
           <div class="conts-area">
             <div class="search-list-top">
               <ul class="sch-info" aria-live="polite">
-                <li>사업신청 목록 <span class="point">22,459</span>건</li>
+                <li class="list-title">단위학교 총<span class="point">22,459</span>명 <em class="description">목록에서 수정하신 사항은 선택 후 선택수정을 클릭해야 내용이 저장됩니다.</em></li>
               </ul>
               <ul class="sch-sort">
                 <li class="m-hide">
@@ -148,7 +148,7 @@
 
             <div class="krds-table-wrap">
               <table class="tbl col data center" data-table="application-list">
-                <caption>사업신청 목록 표</caption>
+                <caption>회원 목록 표</caption>
                 <colgroup>
                   <col style="width: 2%;">
                   <col style="width: 6%;">
