--- a/adm/tmpl/header.html
+++ b/adm/tmpl/header.html
@@ -33,12 +33,12 @@
               </a>
           </nav>
 
-          <nav class="main-nav krds-main-menu">
+          <!-- <nav class="main-nav krds-main-menu">
             <div class="">
 
             </div>
 
-          </nav>
+          </nav> -->
 
 
 
