feat(page)리스트추가

--- a/kr/html/application-list.html
+++ b/kr/html/application-list.html
@@ -43,6 +43,22 @@
 
 <main class="list-container">
         <div class="list-inner">
+            <section class="subtitle-container sub">
+                <div class="subtitle-inner">
+                    <!-- Page Title -->
+                    <h1 class="page-title">개방형사업</h1>
+                    
+                    <!-- breadcrumb -->
+                    <nav class="krds-breadcrumb-wrap" aria-label="현재 경로" id="breadcrumb">
+                      <ol class="breadcrumb">
+                        <li class="home"><a href="#" class="txt">홈</a></li>
+                        <li><a href="#" class="txt">사업신청</a></li>
+                        <li><a href="#" class="txt">개방형사업</a></li>
+                      </ol>
+                    </nav>
+                    <!-- //breadcrumb -->
+                </div>
+            </section>
             <!-- Info Box (Count + Search) -->
             <div class="info-box">
                 <div class="count-wrapper">
@@ -75,6 +91,12 @@
               <table class="tbl col data center">
                 <caption>사업신청 목록 표</caption>
                 <colgroup>
+                  <col style="width:8%;">
+                  <col style="width:42%;">
+                  <col style="width:15%;">
+                  <col>
+                  <col>
+                  <col>
                 </colgroup>
                 <thead>
                   <tr>
@@ -88,14 +110,14 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td><span class="krds-badge state" data-name="state01"></span></td>
+                    <td><span class="krds-badge small custom-bd bg-light-primary">모집중</span></td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name">
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>687</td>
@@ -105,14 +127,14 @@
                     <td>010-1234-5678 </td>
                   </tr>
                   <tr>
-                    <td><span class="krds-badge state" data-name="state02"></span></td>
+                    <td><span class="krds-badge small custom-bd bg-light-warning">모집전</span></td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name " >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project02"></span>
                           <span>2026-선택외-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis ">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>687</td>
@@ -122,14 +144,14 @@
                     <td>010-1234-5678 </td>
                   </tr>
                   <tr>
-                    <td><span class="krds-badge state" data-name="state03"></span></td>
+                    <td><span class="krds-badge small custom-bd bg-light-disabled">모집마감</span></td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name " >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project03"></span>
                           <span>2026-개방형-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis ">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>687</td>
@@ -138,14 +160,14 @@
                     <td>홍길동</td>
                     <td>010-1234-5678 </td>
                   </tr><tr>
-                    <td><span class="krds-badge state" data-name="state01"></span></td>
+                    <td> <span class="krds-badge small custom-bd bg-light-primary">모집중</span></td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name " >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project04"></span>
                           <span>2026-자율-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis ">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>687</td>
@@ -154,14 +176,14 @@
                     <td>홍길동</td>
                     <td>010-1234-5678 </td>
                   </tr><tr>
-                    <td><span class="krds-badge state" data-name="state01"></span></td>
+                    <td> <span class="krds-badge small custom-bd bg-light-primary">모집중</span></td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name " >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project05"></span>
                           <span>2026-특교-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis ">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>687</td>
@@ -170,14 +192,14 @@
                     <td>홍길동</td>
                     <td>010-1234-5678 </td>
                   </tr><tr>
-                    <td><span class="krds-badge state" data-name="state01"></span></td>
+                    <td> <span class="krds-badge small custom-bd bg-light-primary">모집중</span></td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name " >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-개방형-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis ">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>687</td>
@@ -186,14 +208,14 @@
                     <td>홍길동</td>
                     <td>010-1234-5678 </td>
                   </tr><tr>
-                    <td><span class="krds-badge state" data-name="state01"></span></td>
+                    <td> <span class="krds-badge small custom-bd bg-light-primary">모집중</span></td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name " >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-개방형-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis ">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>687</td>
@@ -202,14 +224,14 @@
                     <td>홍길동</td>
                     <td>010-1234-5678 </td>
                   </tr><tr>
-                    <td><span class="krds-badge state" data-name="state01"></span></td>
+                    <td> <span class="krds-badge small custom-bd bg-light-primary">모집중</span></td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name " >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-개방형-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis ">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>687</td>
@@ -218,14 +240,14 @@
                     <td>홍길동</td>
                     <td>010-1234-5678 </td>
                   </tr><tr>
-                    <td><span class="krds-badge state" data-name="state01"></span></td>
+                    <td> <span class="krds-badge small custom-bd bg-light-primary">모집중</span></td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name " >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-개방형-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis ">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>687</td>
@@ -234,14 +256,14 @@
                     <td>홍길동</td>
                     <td>010-1234-5678 </td>
                   </tr><tr>
-                    <td><span class="krds-badge state" data-name="state01"></span></td>
+                    <td> <span class="krds-badge small custom-bd bg-light-primary">모집중</span></td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name " >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-개방형-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis ">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>687</td>
