--- a/kr/tmpl/header.html
+++ b/kr/tmpl/header.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>충청남도교육청 단위학교 사업선택제 - Header</title>
+    <title>충청남도교육청 단위학교 사업선택제 - Header  교사</title>
     <link rel="stylesheet" href="header.css">
 </head>
 <body>
